--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+out
+.vs
 
 ##########################################################
 # Star Engine
@@ -26,5 +28,4 @@ RelWithDebInfo
 MinSizeRel
 
 # Assets
-Textures
-Models
+Assets
